# d2

./: .gitignore  harness.md
translator/: README.md  api-spec.json  d2wasm.py  diablo-roots.json  filename-map.json  prepare-runtime-files.py  requirements.txt  run-gameplay-demo.sh  run-gameplay-egui.sh  run-gameplay-web.sh  serve-gameplay-web.py
translator/.claude/skills/verify/: SKILL.md
translator/d2wasm/: __init__.py  analysis.py  api.py  cfg.py  cli.py  codegen.py  debugdb.py  linker.py  pe.py  recovery.py  semantics.py  validation.py  workspace.py
translator/native-egui/: Cargo.toml
translator/native-egui/src/: game.rs  gameplay.rs  main.rs  manifest.rs  pe.rs  protocol.rs  runtime.rs  ui.rs
translator/native-egui/src/runtime/: dsound.rs  gdi32.rs  kernel32.rs  misc.rs  user32.rs
translator/runtime/: host-platform.mjs  load-pe.mjs  oracle.mjs  run-linked.mjs  run-translated.mjs  win32.mjs
translator/tests/: link-manifest.mjs  smoke-api.def  smoke-api.json  smoke-api.s  smoke-integer.s  smoke-linked-map.json  smoke-linked.c  smoke-linked.def  smoke-reloc.c  smoke-reloc.mjs  smoke-x87.s  smoke.s  smoke.sh  test_cfg.py  test_workspace.py  win32-runtime.mjs
translator/web/: app.mjs  game-worker.mjs  glide-renderer.mjs  index.html  styles.css
