[package]
name = "d2-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "glow", "x11"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmtime = { version = "=45.0.3", default-features = false, features = ["anyhow", "cranelift", "parallel-compilation", "runtime", "std"] }

[profile.release]
strip = "debuginfo"
